# lua-template

./: .gitignore  CMakeLists.txt  conanfile.txt  hello.lua  main.cpp
conan/: conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  lua-config-version.cmake  lua-config.cmake  lua-release-x86_64-data.cmake  lua.pc
